<resources>
    <string name="app_name">AutoRu автопоиск</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_create">Новый автопоиск</string>
    <string name="title_activity_browser">Настройка поиска</string>
    <string name="error">Большое количество частых автопоисков может привести к быстрому расходу заряда аккумулятора (рекомендуемая периодичность - от 5 минут)</string>
    <string name="pref_ringtone_silent">Без звука</string>

    <string name="review_0">Если вам понравилось данное приложение, пожалуйста, оставьте отзыв</string>
    <string name="review_1">Оставить отзыв</string>
    <string name="review_2">Напомнить позже</string>
    <string name="review_3">Больше не напоминать!</string>
    <string name="action_unlock">Снять ограничения</string>
    <string name="action_info">О программе</string>
    <string name="action_review">Оставить отзыв</string>
    <string name="info"><b>Avito автопоиск с уведомлениями</b>\nПочта разработчика:\n<u>iamkatrechko@gmail.com</u></string>
    <string name="others_apps">Другие приложения\nразработчика</string>
    <string name="send_mail">Написать разработчику...</string>
    <string name="send">Выберите приложение для отправки...</string>

    <string name="search_settings_info">Настройте параметры и нажмите кнопку \"Сохранить поиск\"</string>
    <string name="search_settings_loading">Подождите, идет загрузка... (через интернет)</string>
    <string name="search_settings_show">Показать принудительно</string>
    <string name="search_settings_save">Сохранить поиск</string>

    <string name="action_buy_info">Снять ограничения</string>
    <string name="buy_info">Для создания более 1-го автопоиска необходимо преобрести одну из лицензий:</string>
    <string name="license_info">* Для покупки следует нажать на выбранный тариф\n** Лицензия оплачивается только один раз и выдается навсегда</string>
    <string name="but_restore">Восстановить покупку</string>
    <string name="billing_unavailable">Внутренние покупки недоступны.\nОбновите Google Play/Сервисы Google Play для продолжения</string>

    <string name="not_work_1">Если <b>поиски работали</b>, но через какое-то время перестали приходить оповещения, нажмите кнопку \"пересоздать поиски\".</string>
    <string name="not_work_2">Если у вас телефон <b>Meizu (оболочка Flyme OS)</b>, то требуется добавить программу в исключения. Для этого зайдите в \"Настройки\" -> \"Безопасность\"  -> \"Управление питанием\" -> \"Управление спящим режимом\".</string>
    <string name="not_work_3">Если у вас телефон <b>Xiaomi (оболочка MIUI)</b>, значит оболочка блокирует фоновую работу приложения, поэтому вы не получаете уведомления. Для решения проблемы зайдите в пункт \"Безопасность\" -> \"Батарея\" -> \"Экономия энергии\" -> \"Avito автопоиск\" -> \"Нет ограничений\". Также возможно необходимо будет включить уведомления в пунктах \"Уведомления\" и \"Автозапуск\".</string>
    <string name="not_work_4">Если вышеописанные действия не помогают, напишите разработчику.</string>

    <string name="captcha">Капча</string>
    <string name="captcha_find">Найдена капча</string>
    <string name="captcha_next">Для продолжение необходимо ввести капчу. Нажмите на уведомление</string>
    <string name="captcha_enter">Ввести капчу</string>
    <string name="captcha_enter_help">Введите капчу и нажмите кнопку назад</string>

    <string-array name="periods">
        <item>Каждую минуту</item>
        <item>Каждые 3 минуты</item>
        <item>Каждые 5 минут</item>
        <item>Каждые 10 минут</item>
        <item>Каждые 15 минут</item>
        <item>Каждые 30 минут</item>
        <item>Каждый час</item>
        <item>Каждые 2 часа</item>
        <item>Каждые 4 часа</item>
        <item>Каждые 6 часов</item>
        <item>Каждые 12 часов</item>
    </string-array>
    <integer-array name="periods_values">
        <item>60000</item>
        <item>180000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
        <item>14400000</item>
        <item>21600000</item>
        <item>43200000</item>
    </integer-array>
    <string name="title_activity_test">Сервисное меню</string>
    <string name="how_it_work"><b>Что делает программа:</b>\nПрограмма в фоновом режиме проверяет объявления на сайте Avito и при появлении новых предложений выводит автоматическое оповещение об этом.\n<b>Как включить мониторинг:</b>\nДля создания нового автоматического поиска необходимо нажать круглую кнопку +, после чего ввести его имя и настроить параметры поиска. Также можно установить свой интервал автоматической проверки объявлений. Далее следует сохранить поиск нажатием галочки (в кружке), после чего он появится в списке созданных поисков. Чтобы автоматичекий поиск работал, переключатель рядом с его названием должен быть во включенном состоянии.\n<b>Что дальше:</b>\nПосле сохранения и включения автопоиска можно закрыть приложение и продолжить заниматься своими делами, оно будет проверять новые объявления за вас.</string>

    <string name="not_work"><b>Если поиск работал, но вдруг перестал оповещать:</b>\nПрограмма в фоновом режиме проверяет объявления на сайте Avito и при появлении новых предложений выводит автоматическое оповещение об этом.\n<b>Как включить мониторинг:</b>\nДля создания нового автоматического поиска необходимо нажать круглую кнопку +, после чего ввести его имя и настроить параметры поиска. Также можно установить свой интервал автоматической проверки объявлений. Далее следует сохранить поиск нажатием галочки (в кружке), после чего он появится в списке созданных поисков. Чтобы автоматичекий поиск работал, переключатель рядом с его названием должен быть во включенном состоянии.\n<b>Что дальше:</b>\nПосле сохранения и включения автопоиска можно закрыть приложение и продолжить заниматься своими делами, оно будет проверять новые объявления за вас.</string>
</resources>