<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.iamkatrechko.avitonotify.activity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_unlock"
        android:title="@string/action_unlock"
        android:orderInCategory="98"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_review"
        android:title="@string/action_review"
        android:orderInCategory="101"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_how_it_work"
        android:title="Руководство"
        android:orderInCategory="101"
        app:showAsAction="never"/>
    <item
        android:id="@+id/recreate"
        android:title="Перезапустить поиски"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        android:orderInCategory="103"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_recreate"
        android:title="Пересоздать поиски"
        android:orderInCategory="104"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_not_work"
        android:title="Если не работает?"
        android:orderInCategory="105"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_test"
        android:title="Сервисное меню"
        android:visible="false"/>
</menu>