<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_not_work"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.iamkatrechko.avitonotify.activity.NotWorkActivity">

    <TextView
        android:text="@string/not_work_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:text="Пересоздать поиски"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bRecreate"/>

    <TextView
        android:text="Настройки по производителям:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        android:layout_marginTop="8dp"/>

    <TextView
        android:text="@string/not_work_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"/>

    <TextView
        android:text="@string/not_work_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <TextView
        android:text="@string/not_work_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <Button
        android:text="Написать разработчику"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bSendMail"/>
</LinearLayout>
